nyan-cat-jenkins/assets/css/nyan-jenkins.css
table.progress-bar {
  height: 25px !important;
  width: 160px !important;
  border-width: 0 !important;
  background-color: #003366;
  border-radius: 5px;
}

.pane.build-controls,
#executors table td.pane {
  vertical-align: top !important;
}

table tr td.progress-bar-done {
  background: url("chrome-extension://__MSG_@@extension_id__/assets/images/rainbow.gif") repeat-x center center;
  background-size: 16px 25px;
}

table tr td.progress-bar-left {
  background: url("chrome-extension://__MSG_@@extension_id__/assets/images/nyan.gif") no-repeat left center;
  background-size: 30px 25px;
}

